--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -67,6 +67,6 @@ jobs:
           fi
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
+          git add profile/README.md
           git commit -m "auto: sync from Notion"
           git push
